option java_package = "skadistats.clarity.wire.dota.s1.proto";
option java_outer_classname = "DOTAS1MessageId";

enum SVC_Messages {
  svc_ServerInfo = 8;
  svc_SendTable = 9;
  svc_ClassInfo = 10;
  svc_SetPause = 11;
  svc_CreateStringTable = 12;
  svc_UpdateStringTable = 13;
  svc_VoiceInit = 14;
  svc_VoiceData = 15;
  svc_Print = 16;
  svc_Sounds = 17;
  svc_SetView = 18;
  svc_FixAngle = 19;
  svc_CrosshairAngle = 20;
  svc_BSPDecal = 21;
  svc_SplitScreen = 22;
  svc_UserMessage = 23;
  svc_EntityMessage = 24;
  svc_GameEvent = 25;
  svc_PacketEntities = 26;
  svc_TempEntities = 27;
  svc_Prefetch = 28;
  svc_Menu = 29;
  svc_GameEventList = 30;
  svc_GetCvarValue = 31;
  svc_PacketReliable = 32;
  svc_FullFrameSplit = 33;
}

enum EBaseUserMessages {
  UM_AchievementEvent = 1;
  UM_CloseCaption = 2;
  UM_CloseCaptionDirect = 3;
  UM_CurrentTimescale = 4;
  UM_DesiredTimescale = 5;
  UM_Fade = 6;
  UM_GameTitle = 7;
  UM_Geiger = 8;
  UM_HintText = 9;
  UM_HudMsg = 10;
  UM_HudText = 11;
  UM_KeyHintText = 12;
  UM_MessageText = 13;
  UM_RequestState = 14;
  UM_ResetHUD = 15;
  UM_Rumble = 16;
  UM_SayText = 17;
  UM_SayText2 = 18;
  UM_SayTextChannel = 19;
  UM_Shake = 20;
  UM_ShakeDir = 21;
  UM_StatsCrawlMsg = 22;
  UM_StatsSkipState = 23;
  UM_TextMsg = 24;
  UM_Tilt = 25;
  UM_Train = 26;
  UM_VGUIMenu = 27;
  UM_VoiceMask = 28;
  UM_VoiceSubtitle = 29;
  UM_SendAudio = 30;
  UM_CameraTransition = 31;
  UM_MAX_BASE = 63;
}

enum EDotaUserMessages {
  DOTA_UM_AddUnitToSelection = 64;
  DOTA_UM_AIDebugLine = 65;
  DOTA_UM_ChatEvent = 66;
  DOTA_UM_CombatHeroPositions = 67;
  DOTA_UM_CombatLogData = 68;
  DOTA_UM_CombatLogShowDeath = 70;
  DOTA_UM_CreateLinearProjectile = 71;
  DOTA_UM_DestroyLinearProjectile = 72;
  DOTA_UM_DodgeTrackingProjectiles = 73;
  DOTA_UM_GlobalLightColor = 74;
  DOTA_UM_GlobalLightDirection = 75;
  DOTA_UM_InvalidCommand = 76;
  DOTA_UM_LocationPing = 77;
  DOTA_UM_MapLine = 78;
  DOTA_UM_MiniKillCamInfo = 79;
  DOTA_UM_MinimapDebugPoint = 80;
  DOTA_UM_MinimapEvent = 81;
  DOTA_UM_NevermoreRequiem = 82;
  DOTA_UM_OverheadEvent = 83;
  DOTA_UM_SetNextAutobuyItem = 84;
  DOTA_UM_SharedCooldown = 85;
  DOTA_UM_SpectatorPlayerClick = 86;
  DOTA_UM_TutorialTipInfo = 87;
  DOTA_UM_UnitEvent = 88;
  DOTA_UM_ParticleManager = 89;
  DOTA_UM_BotChat = 90;
  DOTA_UM_HudError = 91;
  DOTA_UM_ItemPurchased = 92;
  DOTA_UM_Ping = 93;
  DOTA_UM_ItemFound = 94;
  DOTA_UM_CharacterSpeakConcept = 95;
  DOTA_UM_SwapVerify = 96;
  DOTA_UM_WorldLine = 97;
  DOTA_UM_TournamentDrop = 98;
  DOTA_UM_ItemAlert = 99;
  DOTA_UM_HalloweenDrops = 100;
  DOTA_UM_ChatWheel = 101;
  DOTA_UM_ReceivedXmasGift = 102;
  DOTA_UM_UpdateSharedContent = 103;
  DOTA_UM_TutorialRequestExp = 104;
  DOTA_UM_TutorialPingMinimap = 105;
  DOTA_UM_GamerulesStateChanged = 106;
  DOTA_UM_ShowSurvey = 107;
  DOTA_UM_TutorialFade = 108;
  DOTA_UM_AddQuestLogEntry = 109;
  DOTA_UM_SendStatPopup = 110;
  DOTA_UM_TutorialFinish = 111;
  DOTA_UM_SendRoshanPopup = 112;
  DOTA_UM_SendGenericToolTip = 113;
  DOTA_UM_SendFinalGold = 114;
  DOTA_UM_CustomMsg = 115;
  DOTA_UM_CoachHUDPing = 116;
  DOTA_UM_ClientLoadGridNav = 117;
  DOTA_UM_AbilityPing = 118;
  DOTA_UM_ShowGenericPopup = 119;
  DOTA_UM_VoteStart = 120;
  DOTA_UM_VoteUpdate = 121;
  DOTA_UM_VoteEnd = 122;
  DOTA_UM_BoosterState = 123;
  DOTA_UM_WillPurchaseAlert = 124;
  DOTA_UM_TutorialMinimapPosition = 125;
  DOTA_UM_PlayerMMR = 126;
  DOTA_UM_AbilitySteal = 127;
  DOTA_UM_CourierKilledAlert = 128;
  DOTA_UM_EnemyItemAlert = 129;
  DOTA_UM_StatsMatchDetails = 130;
  DOTA_UM_MiniTaunt = 131;
  DOTA_UM_BuyBackStateAlert = 132;
  DOTA_UM_QuickBuyAlert = 133;
  DOTA_UM_StatsHeroDetails = 134;
  DOTA_UM_PredictionResult = 135;
  DOTA_UM_ModifierAlert = 136;
  DOTA_UM_HPManaAlert = 137;
  DOTA_UM_GlyphAlert = 138;
  DOTA_UM_BeastChat = 139;
  DOTA_UM_SpectatorPlayerUnitOrders = 140;
  DOTA_UM_CompendiumState = 141;
  DOTA_UM_ProjectionAbility = 142;
  DOTA_UM_ProjectionEvent = 143;
}
